--- a/seccion 7/deseos/ionic.config.json
+++ b/seccion 7/deseos/ionic.config.json
@@ -2,5 +2,7 @@
   "name": "deseos",
   "app_id": "d1030f09",
   "type": "ionic-angular",
-  "integrations": {}
+  "integrations": {
+    "cordova": {}
+  }
 }
